--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.0.1",
     "@prisma/client": "^2.28.0",
     "apollo-server": "^3.0.2",
     "graphql": "^15.5.1",
-    "graphql-scalar": "^0.0.11"
+    "graphql-scalars": "^1.10.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.5.0",
